modules/core/main/default/objects/OTISCustomSettings__c/OTISCustomSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>OTIS Custom Settings</label>
</CustomObject>