modules/core/main/default/objects/OTISCustomSettings__c/fields/DefaultWorkTypeId__c.field-meta.xml
<CustomField>
    <fullName>DefaultWorkTypeId__c</fullName>
    <label>DefaultWorkTypeId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>