modules/core/main/default/objects/OTISCustomSettings__c/fields/RepairSkillId__c.field-meta.xml
<CustomField>
    <fullName>RepairSkillId__c</fullName>
    <label>Repair Skill Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>