modules/core/main/default/objects/OTISCustomSettings__c/fields/Timeframe_To_Calculate_SA_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Timeframe_To_Calculate_SA_Due_Date__c</fullName>
    <label>Timeframe To Calculate SA Due Date</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>